<resources>
    <string name="app_name">Workout-Assistant</string>
    <string name="hello_text">Witaj w Workout Assistant</string>

    <string name="browse_trainings">Przeglądaj dostępne treningi</string>
    <string name="browse_yours_trainings">Przeglądaj swoje treningi</string>

    <string name="downloading_error">Błąd podczas pobierania ćwiczeń.</string>
    <string name="downloading_button">Pobierz</string>
    <string name="already_downloaded">Już pobrano!</string>
    <string name="success_download">Pobrano trening.</string>
    <string name="error_download">Wystąpił błąd podczas pobierania treningu.</string>
    <string name="error_download_details">Nie można pobrać szczegółów treningu.</string>

    <string name="plan_training">Zaplanuj</string>
    <string name="delete_training">Usuń</string>

    <string name="success_deleting">Usunięto trening.</string>
    <string name="error_deleting">Nie można usunąć treningu.</string>
    <string name="delete_confirmation">Czy na pewno chcesz usunąć trening?</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <string name="set_date">Ustaw datę i godzinę rozpoczęcia treningu</string>

    <string name="change_button">Zmień</string>
    <string name="save_button">Zapisz</string>

    <string name="notification_before">Masz trening za pół godziny!</string>
    <string name="notification_now">Idź ćwiczyć!</string>

    <string name="planned_training">Zaplanowano trening.</string>
    <string name="non_planned_training">Nie można zaplanować treningu.</string>
    <string name="browse_planned_trainings">Przeglądaj zaplanowane treningi</string>
    <string name="deletion_of_planned_trainig">Usunięto plan treningu.</string>

    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="login">Logowanie</string>
    <string name="sign_in">Zaloguj</string>
    <string name="registration">Rejestracja</string>
    <string name="register">Zarejestruj</string>
    <string name="email">Adres email</string>
    <string name="logout">Wyloguj</string>
    <string name="web_resource">zasoby serwera</string>
    <string name="profile">Profil</string>
    <string name="time">godzina</string>
    <string name="date">data</string>

    <string name="enable_gps">Włącz usługę GPS!</string>
    <string name="check_weather_button">Sprawdź pogodę</string>
    <string name="forecast_temperature">Przewidywana temperatura:</string>
    <string name="rain">Opady:</string>
    <string name="weather_error">Błąd podczas pobierania pogody.</string>
    <string name="days_available_weather">Pogoda dostępna tylko na 5 dni.</string>

    <string name="start">rozpocznij</string>
    <string name="continue_actual_training">Kontynuuj aktualny trening</string>
</resources>
