<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.assistant.workout_assistant.activities.RegisterActivity">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_vertical"-->
    <!--android:orientation="vertical">-->


    <!--<EditText-->
    <!--android:id="@+id/email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_margin="20dp"-->
    <!--android:hint="@string/email"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:padding="10dp"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold" />-->

    <!--<EditText-->
    <!--android:id="@+id/username"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_margin="20dp"-->
    <!--android:hint="@string/username"-->
    <!--android:padding="10dp"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold" />-->

    <!--<EditText-->
    <!--android:id="@+id/password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_margin="20dp"-->
    <!--android:hint="@string/password"-->
    <!--android:inputType="textPassword"-->
    <!--android:padding="10dp"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold" />-->

    <!--</LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:hint="@string/username"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:padding="20dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:padding="20dp"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>
